page BLOG done (slider and pagination), started page BLOG-ONE (single page)

--- a/blog-one.html
+++ b/blog-one.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Desire 0to1</title>
+  <title>Desire 0to1 - Single blog page</title>
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="css/style.min.css">
@@ -75,8 +75,13 @@
               </a>
             </li>
             <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">
+              <a class="breadcrumbs__link" href="blog.html">
                 Blog
+              </a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="blog-one.html">
+                Single Post
               </a>
             </li>
           </ul>
