--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Desire 0to1</title>
+  <title>Desire 0to1 - Blog</title>
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="css/style.min.css">
@@ -102,9 +102,11 @@
                     Bedroom Furniture
                   </a>
                 </div>
-                <h4 class="blog__item-title">
-                  Red selfies edison bulb four dollar toast humblebrag for the furniture
-                </h4>
+                <a class="blog__item-link" href="blog-one.html">
+                  <h4 class="blog__item-title">
+                    Red selfies edison bulb four dollar toast humblebrag for the furniture
+                  </h4>
+                </a>
                 <p class="blog__item-text">
                   Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally
                   williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin
@@ -138,9 +140,11 @@
                     Design
                   </a>
                 </div>
-                <h4 class="blog__item-title">
-                  Authentic kogi shabby chic
-                </h4>
+                <a class="blog__item-link" href="blog-one.html">
+                  <h4 class="blog__item-title">
+                    Authentic kogi shabby chic
+                  </h4>
+                </a>
                 <p class="blog__item-text">
 
                 </p>
@@ -165,9 +169,11 @@
                     Table Furniture
                   </a>
                 </div>
-                <h4 class="blog__item-title">
-                  Semiotics fixie four dollar toast, next level woke
-                </h4>
+                <a class="blog__item-link" href="blog-one.html">
+                  <h4 class="blog__item-title">
+                    Semiotics fixie four dollar toast, next level woke
+                  </h4>
+                </a>
                 <p class="blog__item-text">
                   Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally
                   williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin
@@ -178,15 +184,15 @@
 
               <div class="pagination">
 
-                <a class="pagination__arrow" href="#">
+                <a class="pagination__arrow pagination__arrow--disabled" href="#">
                   <img class="pagination__arrow-icon" src="images/blog/left-arrow.svg" alt="left icon">
                 </a>
 
                 <ul class="pagination__list">
                   <li class="pagination__list-item">
-                    <a class="pagination__list-num pagination__list-num--active" href="#">
+                    <span class="pagination__list-num pagination__list-num--active" href="#">
                       1
-                    </a>
+                    </span>
                   </li>
                   <li class="pagination__list-item">
                     <a class="pagination__list-num" href="#">
