adaptive @MEDIA done for INDEX

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                   Inrerior
                 </a>
               </div>
-              <a class="blog-box__item-titlelink" href="#">
+              <a class="blog-box__item-titlelink" href="blog-one.html">
                 <h4 class="blog-box__item-title">
                   Listicle actually selvage activated charcoal for the drinking vinegar
                 </h4>
@@ -397,7 +397,7 @@
                   Dining room interior
                 </a>
               </div>
-              <a class="blog-box__item-titlelink" href="#">
+              <a class="blog-box__item-titlelink" href="blog-one.html">
                 <h4 class="blog-box__item-title">
                   Red selfies edison bulb four dollar toast humblebrag
                 </h4>
