--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
           <div class="blog-box__items">
 
             <div class="blog-box__item">
-              <a class="blog-box__item-imagelink" href="#">
+              <a class="blog-box__item-imagelink" href="blog-one.html">
                 <img class="blog-box__item-image" src="images/blog/1.jpg" alt="blog article image">
               </a>
               <div class="blog-box__links">
@@ -383,7 +383,7 @@
             </div>
 
             <div class="blog-box__item">
-              <a class="blog-box__item-imagelink" href="#">
+              <a class="blog-box__item-imagelink" href="blog-one.html">
                 <img class="blog-box__item-image" src="images/blog/2.jpg" alt="blog article image">
               </a>
               <div class="blog-box__links">
