--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
       <div class="map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14996.292106053768!2d-122.42245533133162!3d37.79983307792857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580f18d8c6ea7%3A0x5d7f53fb70a3a903!2zNzI1IEdyZWVuIFN0LCBTYW4gRnJhbmNpc2NvLCBDQSA5NDEzMywg0KHQqNCQ!5e0!3m2!1sru!2sua!4v1618235706415!5m2!1sru!2sua"
-          width="100%" height="578" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          width="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
 
       <section class="contacts">
